# opentx-nv14-ufpv

./: .gitignore  CMakeLists.txt
companion/src/: CMakeLists.txt
companion/src/firmwares/: boards.cpp  boards.h  generalsettings.cpp  generalsettings.h
companion/src/simulation/: CMakeLists.txt  radiouiaction.h  simulateduiwidget.cpp  simulateduiwidget.h  simulateduiwidgetI8.cpp  simulateduiwidgetI8.ui  simulateduiwidgetNV14.cpp  simulateduiwidgetNV14.ui  simulateduiwidgetX12.ui  simulatorinterface.h  simulatorstartupdialog.cpp  simulatorwidget.cpp
companion/src/storage/: rlefile.cpp
radio/src/: CMakeLists.txt  audio_arm.cpp  audio_arm.h  bitfield.h  cli.cpp  cli.h  curves.cpp  dataconstants.h  datastructs.h  debug.cpp  debug.h  definitions.h  fifo.h  fonts.h  functions.cpp  gvars.h  haptic.h  keys.cpp  keys.h  languages_packs.h  logs.cpp  main_arm.cpp  math_avr.cpp  mixer.cpp  myeeprom.h  opentx.cpp  opentx.h  opentx_types.h  otx_math.h  pwr.h  rtos.h  sdcard.h  serial.cpp  simu.cpp  stamp.cpp  strhelpers.cpp  strhelpers.h  switches.cpp  tasks_arm.cpp  tasks_arm.h  (+6 more)
radio/src/gui/: CMakeLists.txt  geometry_types.h  gui_common.h  gui_common_arm.cpp
radio/src/io/: bootloader_flash.cpp
radio/src/lua/: CMakeLists.txt  api_general.cpp  api_lcd.cpp  api_model.cpp  interface.cpp  lua_api.h  widgets.cpp
radio/src/pulses/: flysky_arm.cpp  modules.h  multi_arm.cpp  pulses.h  pulses_arm.cpp  pulses_arm.h  pxx_arm.cpp
radio/src/storage/: datacopy.cpp  eeprom_rlc.cpp  modelslist.h  sdcard_raw.cpp  storage_common.cpp
radio/src/targets/i8/: CMakeLists.txt  backlight_driver.cpp  board.cpp  board.h  diskio.cpp  extmodule_driver.cpp  gimbals_driver.cpp  hal.h  i2c_driver.cpp  keys_driver.cpp  lcd_driver.cpp  led_driver.cpp  pulses_driver.cpp  pwr_driver.cpp  stm32f4_flash.ld  telemetry_driver.cpp  touch_driver.cpp  touch_driver.h  trainer_driver.cpp
radio/src/targets/i8/bootloader/: boot_menu.cpp
radio/src/telemetry/: crossfire.cpp  crossfire.h  flysky_nv14.cpp  flysky_nv14.h  frsky.h  telemetry.cpp  telemetry.h  telemetry_holders.h  telemetry_sensors.cpp
radio/src/tests/: lcd_480x272.cpp
radio/src/translations/: cz.h.txt  de.h.txt  en.h.txt  es.h.txt  fi.h.txt  fr.h.txt  (+5 more)
radio/util/: font2png.py  img2lbm.py
(+280 files in other folders)
